syntax = "proto3";
package tutorial;

import "google/protobuf/timestamp.proto";

option go_package = "work2/models";

// для deleted_at использовал Timestamp, но это также может быть Null
// возможно, нужно использовать другой тип данных. Value?
// https://developers.google.com/protocol-buffers/docs/proto3#default
message OneTask {
  uint32 id = 1;  // Unique ID
  string name = 2;
  string event = 3;
  google.protobuf.Timestamp date = 4;
  string description = 5;
  string user_id = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

service Task {
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse);
  rpc CreateTask (CreateRequest) returns (CreateResponse);
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string message = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
  uint32 id = 1;  // Unique ID
  string name = 2;
  string event = 3;
  string description = 5;
  string user_id = 6;
}

message GetTasksResponse2 {
  uint32 id = 1;  // Unique ID
  string name = 2;
  string event = 3;
  google.protobuf.Timestamp date = 4;
  string description = 5;
  string user_id = 6;
    google.protobuf.Timestamp updated_at = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp deleted_at = 9;
}

message CreateRequest {
  string name = 2;
  string event = 3;
  google.protobuf.Timestamp date = 4;
  string description = 5;
}

message CreateResponse {
  uint32 id = 1;  // Unique ID
  string name = 2;
  string event = 3;
  google.protobuf.Timestamp date = 4;
  string description = 5;
  string user_id = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}